// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diffColumns > should add new column 1`] = `
[
  {
    "autocommit": false,
    "description": "Add column "email" to "public"."users"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "email" TEXT;",
    "table": "users",
    "type": "add_column",
  },
]
`;

exports[`diffColumns > should allow VECTOR NOT NULL column when explicit default is provided 1`] = `
[
  {
    "autocommit": false,
    "description": "Add column "embedding" to "public"."items"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."items" ADD COLUMN "embedding" VECTOR(384) NOT NULL DEFAULT '[0,0,0]';",
    "table": "items",
    "type": "add_column",
  },
]
`;

exports[`diffColumns > should emit DROP DEFAULT after drop_readd for NOT NULL column with no explicit default 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop "ref" on "public"."users": INTEGER → UUID (incompatible)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" DROP COLUMN "ref";",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add "ref" on "public"."users": UUID",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "ref" UUID NOT NULL DEFAULT '00000000-0000-0000-0000-000000000000';",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Drop temporary default from "ref" on "public"."users"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."users" ALTER COLUMN "ref" DROP DEFAULT;",
    "table": "users",
    "type": "alter_column_default",
  },
]
`;

exports[`diffColumns > should include COLLATE clause in SQL for collation-only change 1`] = `"ALTER TABLE "public"."test_table" ALTER COLUMN "title" TYPE TEXT COLLATE "en-US-x-icu";"`;

exports[`diffColumns > should include COLLATE clause in type change ALTER when desired has collation 1`] = `"ALTER TABLE "public"."test_table" ALTER COLUMN "title" TYPE VARCHAR(255) COLLATE "en-US-x-icu" USING "title"::varchar(255);"`;

exports[`diffColumns > should include COLLATE in drop_readd re-add SQL when desired has collation 1`] = `"ALTER TABLE "public"."test_table" ADD COLUMN "ref" UUID COLLATE "en-US-x-icu";"`;

exports[`diffColumns > should include NOT NULL in re-add SQL for computed column with nullable:false 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop computed column "total" on "public"."orders" (type/expression changed)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."orders" DROP COLUMN "total";",
    "table": "orders",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add computed column "total" on "public"."orders"",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."orders" ADD COLUMN "total" BIGINT NOT NULL GENERATED ALWAYS AS (a + b + c) STORED;",
    "table": "orders",
    "type": "drop_and_readd_column",
  },
]
`;

exports[`diffColumns > should not corrupt column names containing 'col' substring in USING cast 1`] = `
[
  {
    "autocommit": false,
    "description": "Change type of "protocol" on "public"."connections": TEXT → UUID (USING)",
    "schema": "public",
    "severity": "warning",
    "sql": "ALTER TABLE "public"."connections" ALTER COLUMN "protocol" TYPE UUID USING "protocol"::uuid;",
    "table": "connections",
    "type": "alter_column_type",
  },
]
`;

exports[`diffColumns > should not emit alter_column_default for default change when column is replaced via drop_readd 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop "ref" on "public"."users": INTEGER → UUID (incompatible)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" DROP COLUMN "ref";",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add "ref" on "public"."users": UUID",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "ref" UUID NOT NULL DEFAULT '99';",
    "table": "users",
    "type": "drop_and_readd_column",
  },
]
`;

exports[`diffColumns > should not emit backfill_column or alter_column_nullable when drop_readd also changes nullable 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop "val" on "public"."users": INTEGER → UUID (incompatible)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" DROP COLUMN "val";",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add "val" on "public"."users": UUID",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "val" UUID NOT NULL DEFAULT '00000000-0000-0000-0000-000000000000';",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Drop temporary default from "val" on "public"."users"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."users" ALTER COLUMN "val" DROP DEFAULT;",
    "table": "users",
    "type": "alter_column_default",
  },
]
`;

exports[`diffColumns > should not emit extra DROP DEFAULT after drop_readd when column has explicit default 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop "ref" on "public"."users": INTEGER → UUID (incompatible)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" DROP COLUMN "ref";",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add "ref" on "public"."users": UUID",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "ref" UUID NOT NULL DEFAULT '00000000-0000-0000-0000-000000000001';",
    "table": "users",
    "type": "drop_and_readd_column",
  },
]
`;

exports[`diffColumns > should omit NOT NULL from re-add SQL for computed column with nullable:true 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop computed column "total" on "public"."orders" (type/expression changed)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."orders" DROP COLUMN "total";",
    "table": "orders",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add computed column "total" on "public"."orders"",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."orders" ADD COLUMN "total" BIGINT GENERATED ALWAYS AS (a + b + c) STORED;",
    "table": "orders",
    "type": "drop_and_readd_column",
  },
]
`;

exports[`diffColumns should add new column 1`] = `
[
  {
    "autocommit": false,
    "description": "Add column "email" to "public"."users"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "email" TEXT;",
    "table": "users",
    "type": "add_column",
  },
]
`;

exports[`diffColumns should allow VECTOR NOT NULL column when explicit default is provided 1`] = `
[
  {
    "autocommit": false,
    "description": "Add column "embedding" to "public"."items"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."items" ADD COLUMN "embedding" VECTOR(384) NOT NULL DEFAULT '[0,0,0]';",
    "table": "items",
    "type": "add_column",
  },
]
`;

exports[`diffColumns should emit DROP DEFAULT after drop_readd for NOT NULL column with no explicit default 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop "ref" on "public"."users": INTEGER → UUID (incompatible)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" DROP COLUMN "ref";",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add "ref" on "public"."users": UUID",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "ref" UUID NOT NULL DEFAULT '00000000-0000-0000-0000-000000000000';",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Drop temporary default from "ref" on "public"."users"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."users" ALTER COLUMN "ref" DROP DEFAULT;",
    "table": "users",
    "type": "alter_column_default",
  },
]
`;

exports[`diffColumns should include COLLATE clause in SQL for collation-only change 1`] = `"ALTER TABLE "public"."test_table" ALTER COLUMN "title" TYPE TEXT COLLATE "en-US-x-icu";"`;

exports[`diffColumns should include COLLATE clause in type change ALTER when desired has collation 1`] = `"ALTER TABLE "public"."test_table" ALTER COLUMN "title" TYPE VARCHAR(255) COLLATE "en-US-x-icu" USING "title"::varchar(255);"`;

exports[`diffColumns should include COLLATE in drop_readd re-add SQL when desired has collation 1`] = `"ALTER TABLE "public"."test_table" ADD COLUMN "ref" UUID COLLATE "en-US-x-icu";"`;

exports[`diffColumns should include NOT NULL in re-add SQL for computed column with nullable:false 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop computed column "total" on "public"."orders" (type/expression changed)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."orders" DROP COLUMN "total";",
    "table": "orders",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add computed column "total" on "public"."orders"",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."orders" ADD COLUMN "total" BIGINT NOT NULL GENERATED ALWAYS AS (a + b + c) STORED;",
    "table": "orders",
    "type": "drop_and_readd_column",
  },
]
`;

exports[`diffColumns should not corrupt column names containing 'col' substring in USING cast 1`] = `
[
  {
    "autocommit": false,
    "description": "Change type of "protocol" on "public"."connections": TEXT → UUID (USING)",
    "schema": "public",
    "severity": "warning",
    "sql": "ALTER TABLE "public"."connections" ALTER COLUMN "protocol" TYPE UUID USING "protocol"::uuid;",
    "table": "connections",
    "type": "alter_column_type",
  },
]
`;

exports[`diffColumns should not emit alter_column_default for default change when column is replaced via drop_readd 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop "ref" on "public"."users": INTEGER → UUID (incompatible)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" DROP COLUMN "ref";",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add "ref" on "public"."users": UUID",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "ref" UUID NOT NULL DEFAULT '99';",
    "table": "users",
    "type": "drop_and_readd_column",
  },
]
`;

exports[`diffColumns should not emit backfill_column or alter_column_nullable when drop_readd also changes nullable 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop "val" on "public"."users": INTEGER → UUID (incompatible)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" DROP COLUMN "val";",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add "val" on "public"."users": UUID",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "val" UUID NOT NULL DEFAULT '00000000-0000-0000-0000-000000000000';",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Drop temporary default from "val" on "public"."users"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."users" ALTER COLUMN "val" DROP DEFAULT;",
    "table": "users",
    "type": "alter_column_default",
  },
]
`;

exports[`diffColumns should not emit extra DROP DEFAULT after drop_readd when column has explicit default 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop "ref" on "public"."users": INTEGER → UUID (incompatible)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" DROP COLUMN "ref";",
    "table": "users",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add "ref" on "public"."users": UUID",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."users" ADD COLUMN "ref" UUID NOT NULL DEFAULT '00000000-0000-0000-0000-000000000001';",
    "table": "users",
    "type": "drop_and_readd_column",
  },
]
`;

exports[`diffColumns should omit NOT NULL from re-add SQL for computed column with nullable:true 1`] = `
[
  {
    "autocommit": false,
    "description": "Drop computed column "total" on "public"."orders" (type/expression changed)",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."orders" DROP COLUMN "total";",
    "table": "orders",
    "type": "drop_and_readd_column",
  },
  {
    "autocommit": false,
    "description": "Re-add computed column "total" on "public"."orders"",
    "schema": "public",
    "severity": "destructive",
    "sql": "ALTER TABLE "public"."orders" ADD COLUMN "total" BIGINT GENERATED ALWAYS AS (a + b + c) STORED;",
    "table": "orders",
    "type": "drop_and_readd_column",
  },
]
`;
